Show message when connection is down

--- a/server/static/css/mog.css
+++ b/server/static/css/mog.css
@@ -141,3 +141,23 @@ table.tracks button {
 .active .public_fixedDataTableCell_cellContent {
 	font-weight: bold;
 }
+
+#overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, .5);
+	z-index: 1000;
+}
+
+#overlay-text {
+	position: fixed;
+	top: 20%;
+	left: 0;
+	right: 0;
+	background-color: white;
+	padding: 20px;
+	text-align: center;
+}
