--- a/server/static/css/mog.css
+++ b/server/static/css/mog.css
@@ -64,7 +64,8 @@ footer span {
 	position: fixed;
 	bottom: 60px;
 	height: 20px;
-	width: 100%;
+	left: 0;
+	right: 0;
 	background-color: grey;
 	cursor: pointer;
 }
