--- a/server/static/css/mog.css
+++ b/server/static/css/mog.css
@@ -125,7 +125,7 @@ table.tracks button {
 }
 
 .public_fixedDataTable_bodyRow.public_fixedDataTableRow_highlighted .nowrap div:after {
-	background: linear-gradient(to right, rgba(0,0,0,0), #F6F7F8);
+	background: linear-gradient(to right, rgba(0,0,0,0), #f2f2f2);
 }
 
 .fixedDataTableCellGroup_cellGroup .hover {
