--- a/server/static/css/mog.css
+++ b/server/static/css/mog.css
@@ -52,7 +52,6 @@ a {
 }
 
 footer {
-	font-size: smaller;
 	position: fixed;
 	bottom: 0;
 	left: 0;
@@ -65,18 +64,27 @@ footer {
 	position: fixed;
 	bottom: 70px;
 	height: 10px;
-	left: 80px;
+	left: 0;
 	right: 0;
-	background-color: grey;
 	cursor: pointer;
 }
 
-#seek-pos {
-	position: fixed;
-	bottom: 70px;
-	height: 10px;
-	left: 80px;
-	background-color: orange;
+@keyframes seek1 {
+	from {
+		width: 0;
+	}
+	to {
+		width: 100%;
+	}
+}
+
+@keyframes seek2 {
+	from {
+		width: 0;
+	}
+	to {
+		width: 100%;
+	}
 }
 
 table.tracks tr {
