--- a/server/static/css/mog.css
+++ b/server/static/css/mog.css
@@ -84,22 +84,11 @@ footer {
 	cursor: pointer;
 }
 
-@keyframes seek1 {
-	from {
-		width: 0;
-	}
-	to {
-		width: 100%;
-	}
-}
-
-@keyframes seek2 {
-	from {
-		width: 0;
-	}
-	to {
-		width: 100%;
-	}
+#seek-pos {
+	position: absolute;
+	bottom: 0;
+	top: 0;
+	left: 0;
 }
 
 table.tracks tr {
